# DepthFlow_mobile

./: FIX_SUMMARY.md  IMAGE_ALIGNMENT_FIX.md  PC_STYLE_GUIDE.md  README.md  SOLUTION_SUMMARY.md  USAGE.md  WIDTH_ALIGNMENT_FIX.md  compile_shader_simple.py  compile_shaders.py  create_test_assets.py  depthflow_generator.py  generate_mobile_assets.py  settings.gradle.kts  test_vulkan_fix.md
app/: build.gradle.kts
app/src/androidTest/java/com/df/depthflow_mobile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json
app/src/main/assets/2/: config.json
app/src/main/assets/desk/: config.json
app/src/main/assets/shaders/: depthflow.frag.spv  quad.vert.spv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/df/depthflow_mobile/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: depthflow.frag  quad.vert
app/src/test/java/com/df/depthflow_mobile/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
